# birdeye

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/birdeye/: _events.py  _nodes.py  birdeye.py  cli.py  file_tree_viewer.py  file_tree_viewer.py.save
src/navl/: cli.py  file_tree_viewer.py  navl.py
tests/: test_birdeye.py  test_cli.py  test_file_tree_viewer.py
