[project]
name = "birdeye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sander Teunissen", email = "s.teunissen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pygit2>=1.19.0",
]

[project.scripts]
birdeye = "birdeye.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.10.2",
    "dirty-equals>=0.11",
    "mypy>=1.17.1",
    "pyproject-fmt>=2.6.0",
    "pytest>=8.4.1",
    "pytest-icdiff>=0.9",
    "ruff>=0.12.7",
]
