[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "birdeye"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Sander Teunissen", email = "s.teunissen@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "prompt-toolkit>=3.0.51",
  "pygit2>=1.19",
]

scripts.birdeye = "birdeye.cli:run"

[dependency-groups]
dev = [
  "coverage>=7.10.2",
  "dirty-equals>=0.11",
  "mypy>=1.17.1",
  "pyproject-fmt>=2.6",
  "pytest>=8.4.1",
  "pytest-icdiff>=0.9",
  "ruff>=0.12.7",
]
